--- a/examples/tutorial/basic-0/app/src/App.css
+++ b/examples/tutorial/basic-0/app/src/App.css
@@ -1,38 +1,289 @@
-.App {
-  text-align: center;
+body {
+  background-color: #19123B
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.background_theme {
+  background: #19123B;
+
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.card {
+  border: none;
+  border-top: 5px solid rgb(176, 106, 252);
+  border-left: 5px solid rgb(176, 106, 252);
+  border-right: 5px solid rgb(176, 106, 252);
+  border-bottom: 5px solid rgb(176, 106, 252);
+  margin-bottom: 50px;
+  background: #212042;
+  color: #57557A
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+p {
+  font-weight: 600;
+  font-size: 15px
+}
+
+.fab {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  border: none;
+  background: #2A284D;
+  height: 40px;
+  width: 90px
 }
 
-.App-link {
-  color: #61dafb;
+.fab:hover {
+  cursor: pointer
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+.fa-twitter {
+  color: #56ABEC
+}
+
+.fa-facebook {
+  color: #1775F1
+}
+
+.fa-google {
+  color: #CB5048
+}
+
+.division {
+  float: none;
+  position: relative;
+  margin: 30px auto 20px;
+  text-align: center;
+  width: 100%;
+  box-sizing: border-box
+}
+
+.division .line {
+  border-top: 1.5px solid #57557A;
+  ;
+  position: absolute;
+  top: 13px;
+  width: 85%
+}
+
+.line.l {
+  left: 52px
+}
+
+.line.r {
+  right: 45px
+}
+
+.division span {
+  font-weight: 600;
+  font-size: 14px
+}
+
+.myform {
+  padding: 0 25px 0 33px
+}
+
+.form-control {
+  border: 1px solid #57557A;
+  border-radius: 3px;
+  background: #212042;
+  margin-bottom: 20px;
+  color: #56ABEC;
+  letter-spacing: 1px
+}
+
+.form-control:focus {
+  border: 1px solid #57557A;
+  border-radius: 3px;
+  box-shadow: none;
+  background: #2e2d5c;
+  color: #fff;
+  letter-spacing: 1px
+}
+
+.bn {
+  text-decoration: underline
+}
+
+.bn:hover {
+  cursor: pointer
+}
+
+.form-check-input {
+  margin-top: 8px !important
+}
+
+.btn-primary {
+  background: linear-gradient(135deg, rgba(176, 106, 252, 1) 39%, rgba(116, 17, 255, 1) 101%);
+  border: none;
+  border-radius: 20px;
+ 
+}
+
+.btn-secondary {
+  background: linear-gradient(135deg, rgb(252, 164, 106) 39%, rgb(255, 104, 17) 101%);
+  border: none;
+  border-radius: 20px;
+ 
+}
+
+.full {
+  width: 100%;
+}
+
+.btn-primary:focus {
+  box-shadow: none;
+  border: none
+}
+
+.mts30 {
+  margin-top: 30px;;
+  margin-left: 10px;
+  margin-right: 10px;
+}
+
+
+small {
+  color: #F2CEFF
+}
+
+.far.fa-user {
+  font-size: 13px
+}
+
+@media(min-width: 767px) {
+  .bn {
+      text-align: right
   }
 }
+
+@media(max-width: 767px) {
+  .form-check {
+      text-align: center
+  }
+
+  .bn {
+      text-align: center;
+      align-items: center
+  }
+}
+
+@media(max-width: 450px) {
+  .fab {
+      width: 100%;
+      height: 100%
+  }
+
+  .division .line {
+      width: 50%
+  }
+
+}
+
+.img_logo {
+  width: inherit;
+  
+  transition: all .5s cubic-bezier(0.645, 0.045, 0.355, 1);
+
+
+}
+
+.yello-bg {
+  background-color: yellow;
+}
+
+.mt20{
+  padding-top: 20px;
+}
+.spinner {
+  display: block;
+  position: fixed;
+  z-index: 1031; /* High z-index so it is on top of the page */
+  top: 50%;
+  right: 50%; /* or: left: 50%; */
+}
+
+
+.ring
+{
+  position:absolute;
+  top:50%;
+  left:50%;
+  transform:translate(-50%,-50%);
+  width:150px;
+  height:150px;
+  background:black;
+  border:3px solid #3c3c3c;
+  border-radius:50%;
+  text-align:center;
+  line-height:150px;
+  font-family:sans-serif;
+  font-size:20px;
+  color:#fff000;
+  letter-spacing:4px;
+  text-transform:uppercase;
+  text-shadow:0 0 10px #fff000;
+  box-shadow:0 0 20px rgba(0,0,0,.5);
+}
+.ring:before
+{
+  content:'';
+  position:absolute;
+  top:-3px;
+  left:-3px;
+  width:100%;
+  height:100%;
+  border:3px solid transparent;
+  border-top:3px solid #fff000;
+  border-right:3px solid #fff000;
+  border-radius:50%;
+  animation:animateC 2s linear infinite;
+}
+.ringspan
+{
+  display:block;
+  position:absolute;
+  top:calc(50% - 2px);
+  left:50%;
+  width:50%;
+  height:4px;
+  background:transparent;
+  transform-origin:left;
+  animation:animate 2s linear infinite;
+}
+.ringspan:before
+{
+  content:'';
+  position:absolute;
+  width:16px;
+  height:16px;
+  border-radius:50%;
+  background:#fff000;
+  top:-6px;
+  right:-8px;
+  box-shadow:0 0 20px #fff000;
+}
+@keyframes animateC
+{
+  0%
+  {
+    transform:rotate(0deg);
+  }
+  100%
+  {
+    transform:rotate(360deg);
+  }
+}
+@keyframes animate
+{
+  0%
+  {
+    transform:rotate(45deg);
+  }
+  100%
+  {
+    transform:rotate(405deg);
+  }
+}
+
+
